DevOrg/src/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Application_Cost__c</fullName>
        <label>Application Cost</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BA/BS</fullName>
                </value>
                <value>
                    <fullName>HS Diploma</fullName>
                </value>
                <value>
                    <fullName>MA/MS/MBA</fullName>
                </value>
                <value>
                    <fullName>Ph.D.</fullName>
                </value>
                <value>
                    <fullName>Post Doc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Final_Application_Price__c</fullName>
        <formula>Application_Cost__c *  $Setup.Commission__c.Commission_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Application Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>true</defaultValue>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_of_Exp__c</fullName>
        <label>Years of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidatessssss</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Creation_Rule</fullName>
        <active>true</active>
        <description>This will not any new field to be created</description>
        <errorConditionFormula>AND(NOT(ISNEW()), Application_Cost__c &lt; 200)</errorConditionFormula>
        <errorMessage>Application Cost can not be less than 200 only for newly created Applications</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Postal_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR( Country__c  = &quot;INDIA&quot;,  Country__c  = &quot;IN&quot;),
NOT(REGEX( Zip_Postal_Code__c ,
&quot;((?i)[A-Z]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;))
)</errorConditionFormula>
        <errorMessage>Canadian postal code must be in A9A 9A9 format.</errorMessage>
    </validationRules>
</CustomObject>